# haiki

./: .gitignore  README.md
article-api/: .env.template  README.md  haiki-93e62-firebase-adminsdk-upvt6-16378ba45c.json  main.py  pyproject.toml
article-api/chroma/: __init__.py  db.py  document_store.py  errors.py  utils.py
article-api/database/: __init__.py  firestore.py
article-api/form/: article.py
article-api/formatter/: article.py
article-api/logger/: logger.py
article-api/pipelines/: __init__.py  article.py  paper.py  sample_template.json
article-api/utils/: files.py
frontend/: bun.lockb  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/api/: article.ts  topics.ts
frontend/src/assets/: test-data.ts
frontend/src/components/ui/: citations.tsx  command.tsx  navbar.tsx  search-bar.tsx
frontend/src/routes/: __root.tsx  article.lazy.tsx  index.lazy.tsx
frontend/src/store/: index.ts
frontend/src/types/: article.ts
