[tool.poetry]
name = "article-api"
version = "0.1.0"
description = ""
authors = ["Sebastiaan Gerritsen <s.e.gerritsen@outlook.com>"]
readme = "README.md"
packages = [{include = "article_api"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
